# stairs_detection_pcd

./: CMakeLists.txt
include/: visualizer.h
include/RGBD/: current_scene.h  global_scene.h  plane.h
include/stair/: current_scene_stair.h  global_scene_stair.h  stair_classes.h
src/: main_stairs.cpp  visualizer.cpp
src/RGBD/: current_scene.cpp  global_scene.cpp  plane.cpp
src/stair/: current_scene_stair.cpp  stair_classes.cpp
